[REFACTOR] improve maintainability